--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 
 # dependencies
 /node_modules
+/Function/node_modules
 /.pnp
 .pnp.js
 
@@ -14,6 +15,7 @@
 # misc
 .DS_Store
 .env
+/Function/.env
 .env.local
 .env.development.local
 .env.test.local
