--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gsap": "^3.5.1",
     "history": "^5.0.0",
     "immer": "^7.0.9",
+    "moment": "^2.29.0",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
